lang/parser/doodad.output
Grammar

    0 $accept: prog $end

    1 prog: stmts
    2     | header stmts

    3 stmts: %empty
    4      | line Newline stmts
    5      | block stmts

    6 header: module ident Newline imports

    7 imports: %empty
    8        | import Newline imports
    9        | import_c Newline imports

   10 symbol: ident
   11       | ident DoubleColon ident

   12 mfnrec: %empty
   13       | '{' paramsA '}'

   14 initialiser: '{' exprsA '}'
   15            | string_c

   16 minitialiser: initialiser
   17             | %empty

   18 line: let pattern '=' expr
   19     | index '=' expr
   20     | index
   21     | type symbol anno_t
   22     | return mexpr
   23     | data symbol type_ minitialiser

   24 block: if_
   25      | fn mfnrec ident '(' paramsA ')' mtype scope
   26      | while condition scope
   27      | for expr scope
   28      | for expr RArrow pattern scope
   29      | switch_

   30 scope: Indent stmts Dedent
   31      | ';' line Newline
   32      | ';' Newline

   33 condition: expr
   34          | expr RArrow pattern

   35 param: ident type_

   36 params: %empty
   37       | params1

   38 params1: param
   39        | param ',' params1

   40 paramsN: param Newline
   41        | param Newline paramsN

   42 paramsA: params
   43        | Indent paramsN Dedent

   44 if_: if condition scope else_
   45    | if condition Newline else_

   46 else_: else scope
   47      | else if_
   48      | %empty

   49 switch_: switch expr Indent cases1 Dedent
   50        | switch expr

   51 cases1: case
   52       | case cases1

   53 case: pattern scope

   54 patterns: %empty
   55         | patterns1

   56 patterns1: pattern
   57          | pattern ',' patterns1

   58 patternsSem: patterns
   59            | patterns ';' patternsSem

   60 pattern: '_'
   61        | literal
   62        | '-' int_c
   63        | ident
   64        | null
   65        | '(' patterns ')'
   66        | '[' patternsSem ']'
   67        | pattern '|' expr
   68        | pattern '|' expr RArrow pattern
   69        | symbol '(' patterns ')'
   70        | ordinal_t '(' pattern ')'
   71        | pattern ':' type_

   72 exprs: %empty
   73      | exprs1

   74 exprs1: expr
   75       | expr ',' exprs1

   76 exprsN: expr Newline
   77       | expr Newline exprsN

   78 mexpr: %empty
   79      | expr

   80 exprsA: exprs
   81       | Indent exprsN Dedent

   82 call: symbol '(' exprsA ')'
   83     | '{' exprsA '}' '.' ident '(' exprsA ')'

   84 index: symbol
   85      | index '[' expr ']'
   86      | index '.' ident
   87      | index '.' symbol '(' exprsA ')'
   88      | call

   89 expr: literal
   90     | infix
   91     | prefix
   92     | call
   93     | symbol
   94     | '(' exprsA ')'
   95     | ordinal_t '(' exprsA ')'
   96     | null
   97     | expr '.' ident
   98     | expr '[' expr ']'
   99     | expr ':' type_
  100     | expr '.' ident '(' exprsA ')'
  101     | expr '[' mexpr DoubleDot mexpr ']'
  102     | '[' mexpr DoubleDot mexpr ']'
  103     | '[' exprsA ']'

  104 literal: int_c
  105        | float_c
  106        | char_c
  107        | string_c
  108        | true
  109        | false

  110 infix: expr '+' expr
  111      | expr '-' expr
  112      | expr '*' expr
  113      | expr '/' expr
  114      | expr '%' expr
  115      | expr '<' expr
  116      | expr '>' expr
  117      | expr LtEq expr
  118      | expr GtEq expr
  119      | expr EqEq expr
  120      | expr AndAnd expr
  121      | expr OrOr expr
  122      | expr NotEq expr

  123 prefix: '-' expr
  124       | '+' expr
  125       | '!' expr

  126 mtype: %empty
  127      | type_

  128 types: %empty
  129      | types1

  130 types1: type_
  131       | type_ ',' types1

  132 types1_: type_
  133        | type_ ';' types1_

  134 type_: symbol
  135      | ordinal_t
  136      | aggregate_t

  137 ordinal_t: bool
  138          | i16
  139          | i32
  140          | i64
  141          | f32
  142          | f64
  143          | char
  144          | '@' type_

  145 aggregate_t: table_t
  146            | array_t
  147            | tup_t
  148            | adt_t
  149            | sparse_t
  150            | map_t
  151            | range_t
  152            | fn '(' types ')' type_

  153 adt_t: '{' adtFields '}'

  154 array_t: '[' int_c type_ ']'

  155 table_t: '[' types1_ ']'
  156        | string

  157 tup_t: '(' types ')'

  158 sparse_t: sparse '[' types1_ ']'

  159 map_t: map '[' type_ ']' type_

  160 range_t: '[' DoubleDot ']' type_

  161 anno_t: ordinal_t
  162       | symbol
  163       | '(' types1 ')'
  164       | '(' paramsA ')'
  165       | array_t
  166       | table_t
  167       | sparse_t
  168       | '{' ADTFieldsA '}'

  169 adtFields: %empty
  170          | adtFields1

  171 adtFields1: adtField
  172           | adtField '|' adtFields1

  173 adtField: type_
  174         | null

  175 ADTFieldsA: ADTFields1
  176           | Indent ADTFieldsN Dedent

  177 ADTFieldsN: ADTField Newline
  178           | ADTField Newline ADTFieldsN

  179 ADTFields1: ADTField
  180           | ADTField '|' ADTFields1

  181 ADTField: ident '(' types ')'
  182         | type_
  183         | null


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 125
    '%' (37) 114
    '(' (40) 25 65 69 70 82 83 87 94 95 100 152 157 163 164 181
    ')' (41) 25 65 69 70 82 83 87 94 95 100 152 157 163 164 181
    '*' (42) 112
    '+' (43) 110 124
    ',' (44) 39 57 75 131
    '-' (45) 62 111 123
    '.' (46) 83 86 87 97 100
    '/' (47) 113
    ':' (58) 71 99
    ';' (59) 31 32 59 133
    '<' (60) 115
    '=' (61) 18 19
    '>' (62) 116
    '@' (64) 144
    '[' (91) 66 85 98 101 102 103 154 155 158 159 160
    ']' (93) 66 85 98 101 102 103 154 155 158 159 160
    '_' (95) 60
    '{' (123) 13 14 83 153 168
    '|' (124) 67 68 172 180
    '}' (125) 13 14 83 153 168
    error (256)
    Indent (258) 30 43 49 81 176
    Dedent (259) 30 43 49 81 176
    Newline (260) 4 6 8 9 31 32 40 41 45 76 77 177 178
    NotEq (261) 122
    LtEq (262) 117
    GtEq (263) 118
    EqEq (264) 119
    AndAnd (265) 120
    OrOr (266) 121
    DoubleColon (267) 11
    RArrow (268) 28 34 68
    DoubleDot (269) 101 102 160
    fn (270) 25 152
    type (271) 21
    if (272) 44 45
    else (273) 46 47
    let (274) 18
    while (275) 26
    return (276) 22
    switch (277) 49 50
    true (278) 108
    false (279) 109
    module (280) 6
    for (281) 27 28
    null (282) 64 96 174 183
    data (283) 23
    import (284) 8
    import_c (285) 9
    i16 (286) 138
    i32 (287) 139
    i64 (288) 140
    f32 (289) 141
    f64 (290) 142
    bool (291) 137
    char (292) 143
    string (293) 156
    sparse (294) 158
    map (295) 159
    int_c (296) 62 104 154
    float_c (297) 105
    char_c (298) 106
    string_c (299) 15 107
    ident (300) 6 10 11 25 35 63 83 86 97 100 181


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    prog (69)
        on left: 1 2
        on right: 0
    stmts (70)
        on left: 3 4 5
        on right: 1 2 4 5 30
    header (71)
        on left: 6
        on right: 2
    imports (72)
        on left: 7 8 9
        on right: 6 8 9
    symbol (73)
        on left: 10 11
        on right: 21 23 69 82 84 87 93 134 162
    mfnrec (74)
        on left: 12 13
        on right: 25
    initialiser (75)
        on left: 14 15
        on right: 16
    minitialiser (76)
        on left: 16 17
        on right: 23
    line (77)
        on left: 18 19 20 21 22 23
        on right: 4 31
    block (78)
        on left: 24 25 26 27 28 29
        on right: 5
    scope (79)
        on left: 30 31 32
        on right: 25 26 27 28 44 46 53
    condition (80)
        on left: 33 34
        on right: 26 44 45
    param (81)
        on left: 35
        on right: 38 39 40 41
    params (82)
        on left: 36 37
        on right: 42
    params1 (83)
        on left: 38 39
        on right: 37 39
    paramsN (84)
        on left: 40 41
        on right: 41 43
    paramsA (85)
        on left: 42 43
        on right: 13 25 164
    if_ (86)
        on left: 44 45
        on right: 24 47
    else_ (87)
        on left: 46 47 48
        on right: 44 45
    switch_ (88)
        on left: 49 50
        on right: 29
    cases1 (89)
        on left: 51 52
        on right: 49 52
    case (90)
        on left: 53
        on right: 51 52
    patterns (91)
        on left: 54 55
        on right: 58 59 65 69
    patterns1 (92)
        on left: 56 57
        on right: 55 57
    patternsSem (93)
        on left: 58 59
        on right: 59 66
    pattern (94)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 18 28 34 53 56 57 67 68 70 71
    exprs (95)
        on left: 72 73
        on right: 80
    exprs1 (96)
        on left: 74 75
        on right: 73 75
    exprsN (97)
        on left: 76 77
        on right: 77 81
    mexpr (98)
        on left: 78 79
        on right: 22 101 102
    exprsA (99)
        on left: 80 81
        on right: 14 82 83 87 94 95 100 103
    call (100)
        on left: 82 83
        on right: 88 92
    index (101)
        on left: 84 85 86 87 88
        on right: 19 20 85 86 87
    expr (102)
        on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
        on right: 18 19 27 28 33 34 49 50 67 68 74 75 76 77 79 85 97 98 99 100 101 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125
    literal (103)
        on left: 104 105 106 107 108 109
        on right: 61 89
    infix (104)
        on left: 110 111 112 113 114 115 116 117 118 119 120 121 122
        on right: 90
    prefix (105)
        on left: 123 124 125
        on right: 91
    mtype (106)
        on left: 126 127
        on right: 25
    types (107)
        on left: 128 129
        on right: 152 157 181
    types1 (108)
        on left: 130 131
        on right: 129 131 163
    types1_ (109)
        on left: 132 133
        on right: 133 155 158
    type_ (110)
        on left: 134 135 136
        on right: 23 35 71 99 127 130 131 132 133 144 152 154 159 160 173 182
    ordinal_t (111)
        on left: 137 138 139 140 141 142 143 144
        on right: 70 95 135 161
    aggregate_t (112)
        on left: 145 146 147 148 149 150 151 152
        on right: 136
    adt_t (113)
        on left: 153
        on right: 148
    array_t (114)
        on left: 154
        on right: 146 165
    table_t (115)
        on left: 155 156
        on right: 145 166
    tup_t (116)
        on left: 157
        on right: 147
    sparse_t (117)
        on left: 158
        on right: 149 167
    map_t (118)
        on left: 159
        on right: 150
    range_t (119)
        on left: 160
        on right: 151
    anno_t (120)
        on left: 161 162 163 164 165 166 167 168
        on right: 21
    adtFields (121)
        on left: 169 170
        on right: 153
    adtFields1 (122)
        on left: 171 172
        on right: 170 172
    adtField (123)
        on left: 173 174
        on right: 171 172
    ADTFieldsA (124)
        on left: 175 176
        on right: 168
    ADTFieldsN (125)
        on left: 177 178
        on right: 176 178
    ADTFields1 (126)
        on left: 179 180
        on right: 175 180
    ADTField (127)
        on left: 181 182 183
        on right: 177 178 179 180


State 0

    0 $accept: • prog $end

    fn      shift, and go to state 1
    type    shift, and go to state 2
    if      shift, and go to state 3
    let     shift, and go to state 4
    while   shift, and go to state 5
    return  shift, and go to state 6
    switch  shift, and go to state 7
    module  shift, and go to state 8
    for     shift, and go to state 9
    data    shift, and go to state 10
    ident   shift, and go to state 11
    '{'     shift, and go to state 12

    $default  reduce using rule 3 (stmts)

    prog     go to state 13
    stmts    go to state 14
    header   go to state 15
    symbol   go to state 16
    line     go to state 17
    block    go to state 18
    if_      go to state 19
    switch_  go to state 20
    call     go to state 21
    index    go to state 22


State 1

   25 block: fn • mfnrec ident '(' paramsA ')' mtype scope

    '{'  shift, and go to state 23

    $default  reduce using rule 12 (mfnrec)

    mfnrec  go to state 24


State 2

   21 line: type • symbol anno_t

    ident  shift, and go to state 11

    symbol  go to state 25


State 3

   44 if_: if • condition scope else_
   45    | if • condition Newline else_

    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    symbol     go to state 46
    condition  go to state 47
    call       go to state 48
    expr       go to state 49
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 4

   18 line: let • pattern '=' expr

    '-'       shift, and go to state 54
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 55
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 56
    '('       shift, and go to state 57
    '['       shift, and go to state 58
    '_'       shift, and go to state 59

    symbol     go to state 60
    pattern    go to state 61
    literal    go to state 62
    ordinal_t  go to state 63


State 5

   26 block: while • condition scope

    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    symbol     go to state 46
    condition  go to state 64
    call       go to state 48
    expr       go to state 49
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 6

   22 line: return • mexpr

    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    $default  reduce using rule 78 (mexpr)

    symbol     go to state 46
    mexpr      go to state 65
    call       go to state 48
    expr       go to state 66
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 7

   49 switch_: switch • expr Indent cases1 Dedent
   50        | switch • expr

    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    symbol     go to state 46
    call       go to state 48
    expr       go to state 67
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 8

    6 header: module • ident Newline imports

    ident  shift, and go to state 68


State 9

   27 block: for • expr scope
   28      | for • expr RArrow pattern scope

    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    symbol     go to state 46
    call       go to state 48
    expr       go to state 69
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 10

   23 line: data • symbol type_ minitialiser

    ident  shift, and go to state 11

    symbol  go to state 70


State 11

   10 symbol: ident •
   11       | ident • DoubleColon ident

    DoubleColon  shift, and go to state 71

    $default  reduce using rule 10 (symbol)


State 12

   83 call: '{' • exprsA '}' '.' ident '(' exprsA ')'

    Indent    shift, and go to state 72
    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    $default  reduce using rule 72 (exprs)

    symbol     go to state 46
    exprs      go to state 73
    exprs1     go to state 74
    exprsA     go to state 75
    call       go to state 48
    expr       go to state 76
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 13

    0 $accept: prog • $end

    $end  shift, and go to state 77


State 14

    1 prog: stmts •

    $default  reduce using rule 1 (prog)


State 15

    2 prog: header • stmts

    fn      shift, and go to state 1
    type    shift, and go to state 2
    if      shift, and go to state 3
    let     shift, and go to state 4
    while   shift, and go to state 5
    return  shift, and go to state 6
    switch  shift, and go to state 7
    for     shift, and go to state 9
    data    shift, and go to state 10
    ident   shift, and go to state 11
    '{'     shift, and go to state 12

    $default  reduce using rule 3 (stmts)

    stmts    go to state 78
    symbol   go to state 16
    line     go to state 17
    block    go to state 18
    if_      go to state 19
    switch_  go to state 20
    call     go to state 21
    index    go to state 22


State 16

   82 call: symbol • '(' exprsA ')'
   84 index: symbol •

    '('  shift, and go to state 79

    $default  reduce using rule 84 (index)


State 17

    4 stmts: line • Newline stmts

    Newline  shift, and go to state 80


State 18

    5 stmts: block • stmts

    fn      shift, and go to state 1
    type    shift, and go to state 2
    if      shift, and go to state 3
    let     shift, and go to state 4
    while   shift, and go to state 5
    return  shift, and go to state 6
    switch  shift, and go to state 7
    for     shift, and go to state 9
    data    shift, and go to state 10
    ident   shift, and go to state 11
    '{'     shift, and go to state 12

    $default  reduce using rule 3 (stmts)

    stmts    go to state 81
    symbol   go to state 16
    line     go to state 17
    block    go to state 18
    if_      go to state 19
    switch_  go to state 20
    call     go to state 21
    index    go to state 22


State 19

   24 block: if_ •

    $default  reduce using rule 24 (block)


State 20

   29 block: switch_ •

    $default  reduce using rule 29 (block)


State 21

   88 index: call •

    $default  reduce using rule 88 (index)


State 22

   19 line: index • '=' expr
   20     | index •
   85 index: index • '[' expr ']'
   86      | index • '.' ident
   87      | index • '.' symbol '(' exprsA ')'

    '='  shift, and go to state 82
    '['  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 20 (line)


State 23

   13 mfnrec: '{' • paramsA '}'

    Indent  shift, and go to state 85
    ident   shift, and go to state 86

    $default  reduce using rule 36 (params)

    param    go to state 87
    params   go to state 88
    params1  go to state 89
    paramsA  go to state 90


State 24

   25 block: fn mfnrec • ident '(' paramsA ')' mtype scope

    ident  shift, and go to state 91


State 25

   21 line: type symbol • anno_t

    '@'     shift, and go to state 29
    i16     shift, and go to state 33
    i32     shift, and go to state 34
    i64     shift, and go to state 35
    f32     shift, and go to state 36
    f64     shift, and go to state 37
    bool    shift, and go to state 38
    char    shift, and go to state 39
    string  shift, and go to state 92
    sparse  shift, and go to state 93
    ident   shift, and go to state 11
    '('     shift, and go to state 94
    '{'     shift, and go to state 95
    '['     shift, and go to state 96

    symbol     go to state 97
    ordinal_t  go to state 98
    array_t    go to state 99
    table_t    go to state 100
    sparse_t   go to state 101
    anno_t     go to state 102


State 26

  124 prefix: '+' • expr

    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    symbol     go to state 46
    call       go to state 48
    expr       go to state 103
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 27

  123 prefix: '-' • expr

    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    symbol     go to state 46
    call       go to state 48
    expr       go to state 104
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 28

  125 prefix: '!' • expr

    '+'       shift, and go to state 26
    '-'       shift, and go to state 27
    '!'       shift, and go to state 28
    '@'       shift, and go to state 29
    true      shift, and go to state 30
    false     shift, and go to state 31
    null      shift, and go to state 32
    i16       shift, and go to state 33
    i32       shift, and go to state 34
    i64       shift, and go to state 35
    f32       shift, and go to state 36
    f64       shift, and go to state 37
    bool      shift, and go to state 38
    char      shift, and go to state 39
    int_c     shift, and go to state 40
    float_c   shift, and go to state 41
    char_c    shift, and go to state 42
    string_c  shift, and go to state 43
    ident     shift, and go to state 11
    '('       shift, and go to state 44
    '{'       shift, and go to state 12
    '['       shift, and go to state 45

    symbol     go to state 46
    call       go to state 48
    expr       go to state 105
    literal    go to state 50
    infix      go to state 51
    prefix     go to state 52
    ordinal_t  go to state 53


State 29

  144 ordinal_t: '@' • type_

    '@'     shift, and go to state 29
    fn      shift, and go to state 106
    i16     shift, and go to state 33
    i32     shift, and go to state 34
    i64     shift, and go to state 35
    f32     shift, and go to state 36
    f64     shift, and go to state 37
    bool    shift, and go to state 38
    char    shift, and go to state 39
    string  shift, and go to state 92
    sparse  shift, and go to state 93
    map     shift, and go to state 107
    ident   shift, and go to state 11
    '('     shift, and go to state 108
    '{'     shift, and go to state 109
    '['     shift, and go to state 110

    symbol       go to state 111
    type_        go to state 112
    ordinal_t    go to state 113
    aggregate_t  go to state 114
    adt_t        go to state 115
    array_t      go to state 116
    table_t      go to state 117
    tup_t        go to state 118
    sparse_t     go to state 119
    map_t        go to state 120
    range_t      go to state 121


State 30

  108 literal: true •

    $default  reduce using rule 108 (literal)


State 31

  109 literal: false •

    $default  reduce using rule 109 (literal)


State 32

   96 expr: null •

    $default  reduce using rule 96 (expr)


State 33

  138 ordinal_t: i16 •

    $default  reduce using rule 138 (ordinal_t)


State 34

  139 ordinal_t: i32 •

    $default  reduce using rule 139 (ordinal_t)


State 35

  140 ordinal_t: i64 •

    $default  reduce using rule 140 (ordinal_t)


State 36

  141 ordinal_t: f32 •

    $default  reduce using rule 141 (ordinal_t)


State 37

  142 ordinal_t: f64 •

    $default  reduce using rule 142 (ordinal_t)


State 38
